plugins {
    id 'java'
    id 'org.springframework.boot' version '2.7.18'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.phobi'
version = '1.0.0'

bootJar {
    archiveBaseName = 'gamja'
    archiveFileName = "${archiveBaseName.get()}-${archiveVersion.get()}.jar"
}


java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // 웹 서버 (Spring MVC)
    implementation 'org.springframework.boot:spring-boot-starter-web'
    //swagger
    implementation 'org.springdoc:springdoc-openapi-ui:1.6.14'
    // JPA (DB ORM)
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // MariaDB 드라이버
    implementation 'org.mariadb.jdbc:mariadb-java-client:3.1.4'
    implementation 'org.postgresql:postgresql:42.7.3'

    // 롬복 (Getter/Setter 자동 생성)
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // 개발 편의 도구 (자동 리스타트 등)
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // 테스트
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

}

tasks.named('test') {
    useJUnitPlatform()
}
